[package]
name = "hq"
description = "CLI Swiss Army Knife"
readme = "README.md"
repository = "https://github.com/pgoodjohn/hq/"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
requestty = "0.3.0"
chrono = "0.4"
dirs = "4.0"
log = "0.4"
env_logger = "0.9"